# qft-nn

./: .gitignore  nnsight_base.py  pyproject.toml  utils_funs.py
experiments/sae/: run.py
modular_addition/: compute_fourier_peakness.py  influence_functions_mlp.py  model.py  model_mlp_ihvp.py  model_viz.py  train.py  train_mlp_ihvp.py
modular_addition/exp_params/example2/: 53_0.json
notebooks/: ENTK-SAE-single-word-analysis_V1.ipynb  MLP-SAE-V7-linear-Final.ipynb  analysis_notebook copy.ipynb  analysis_notebook.ipynb  analysis_notebook_overtrained_quad.ipynb  analysis_notebook_undertrained_quad.ipynb  coarse-graining-200-examples-v2-Final.ipynb
qft_nn/: ntk.py
tests/: test_sae.py
