
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qft_nn"]

[project]
name = "qft_nn"
version = "0.1"
description = "Repo for exploring qft-nn correspondence for interpretability"

dependencies = [
    "torch",
    "numpy",
    "plotly",
    "datasets",
    "transformer_lens",
    "sae_lens"
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "jaxtyping",
]